<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.compilelab.obbstorage.ui.fragment.ExtractActivityFragment">

    <EditText
        android:id="@+id/edt_obb_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_obb_path"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="50"
        android:minLines="4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/edt_extract_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_obb_path"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_extract_path"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="50"
        android:minLines="4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_extract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_extract_path"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:minWidth="120dp"
        android:onClick="onClickExtract"
        android:text="@string/txt_extract"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:textStyle="bold"/>

</RelativeLayout>
